force-app/main/default/objects/Duplicate_Account_Tracking__c/Duplicate_Account_Tracking__c.object-meta.xml
<CustomObject>
    <label>Duplicate Account Tracking</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Duplicate Account Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Account Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>