force-app/main/default/objects/Duplicate_Account_Tracking__c/fields/Duplicate_notes_context__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_notes_context__c</fullName>
    <label>Duplicate notes/context?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>