force-app/main/default/objects/Duplicate_Account_Tracking__c/fields/Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Duplicate Account Tracking (Matched Account)</relationshipLabel>
    <relationshipName>Matched_Account</relationshipName>
    <type>Lookup</type>
</CustomField>