force-app/main/default/objects/Duplicate_Account_Tracking__c/fields/Matched_Account_Win_Id__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Win_Id__c</fullName>
    <formula>Matched_Account__r.WIN_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Account Win Id</label>
    <type>Text</type>
</CustomField>