force-app/main/default/objects/Duplicate_Account_Tracking__c/fields/Matching_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Matching_Account_Name__c</fullName>
    <formula>Matched_Account__r.Account_Name_Hyperlink__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matching Account Name</label>
    <type>Text</type>
</CustomField>