force-app/main/default/objects/Duplicate_Account_Tracking__c/fields/Matching_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Matching_Shipping_Address__c</fullName>
    <formula>Matched_Account__r.ShippingStreet + &apos; &apos; + Matched_Account__r.ShippingCity + &apos; &apos; +  Matched_Account__r.ShippingState + &apos; &apos; +  Matched_Account__r.ShippingCountry + &apos; &apos; +  Matched_Account__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matching Shipping Address</label>
    <type>Text</type>
</CustomField>