force-app/main/default/objects/Duplicate_Account_Tracking__c/fields/Reason_for_matching__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_matching__c</fullName>
    <label>Reason for matching?</label>
    <type>TextArea</type>
</CustomField>